WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235078
[WebAuthn] Fix freebie call without user gesture not being given
https://bugs.webkit.org/show_bug.cgi?id=235078
Summary
[WebAuthn] Fix freebie call without user gesture not being given
pascoe@apple.com
Reported
2022-01-11 12:05:27 PST
rdar://87327557
Attachments
Patch
(2.45 KB, patch)
2022-01-11 12:55 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch
(4.36 KB, patch)
2022-01-12 10:55 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2022-01-11 12:55:56 PST
Created
attachment 448872
[details]
Patch
pascoe@apple.com
Comment 2
2022-01-12 10:55:16 PST
Created
attachment 448966
[details]
Patch
Brent Fulgham
Comment 3
2022-01-12 15:30:38 PST
Comment on
attachment 448966
[details]
Patch r=me
EWS
Comment 4
2022-01-12 15:47:02 PST
Committed
r287957
(
245986@main
): <
https://commits.webkit.org/245986@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448966
[details]
.
Tal Peretz
Comment 5
2022-01-17 08:02:02 PST
Which IOS version will this fix be released on? Really looking forward to this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug