Cherry-pick r287957. rdar://problem/87327557

[WebAuthn] Fix freebie call without user gesture not being given
    https://bugs.webkit.org/show_bug.cgi?id=235078
    rdar://87327557

    Reviewed by Brent Fulgham.

    Source/WebKit:

    This logic was previously always requiring a user gesture. The desired
    behavior of giving pages a single "freebie" webauthn call without gesture
    was lost in a refactor.

    Tested manually on iOS device with webauthn.me.

    * WebProcess/WebAuthentication/WebAuthenticatorCoordinator.cpp:
    (WebKit::WebAuthenticatorCoordinator::processingUserGesture):

    Tools:

    Updated API test to reflect user gesture freebie.

    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-make-credential-la-no-mock.html:

    Canonical link: https://commits.webkit.org/245986@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287957 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.9@safari-613.1.14.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.14.0-branch@288137 268f45cc-cd09-0410-ab3c-d52691b4dbfc